# SAIR_Competition

./: .gitignore  README.md  llm_api_example.py  pr.md  pyproject.toml
.claude/: settings.local.json
artifacts/: README.md
artifacts/backups/: README.md
artifacts/candidates/: README.md
artifacts/final/: README.md
configs/: README.md
configs/eval/: public_eval.example.json
configs/models/: proxy_models.example.json
configs/prompts/: baseline_minimal.example.json  official_archetypes.example.json  offline_rule_assets.example.jsonl  rule_registry.example.jsonl
data/: README.md
data/interim/: README.md
data/raw/: README.md
docs/: Doubao的总结与分析.md  SAIR代数推理竞赛工程化实验计划.md  下一周执行清单.md  大模型代数推理能力提升方法调研分析.md  大模型数学与代数推理能力提升方法综合报告.md  大语言模型数学与代数推理能力提升的架构演进与前沿方法分析.md  理论备忘.md  项目工作历程与阶段性成果总结.md  项目迁移交接Prompt.md
prompts/: README.md
prompts/archive/: README.md
prompts/cheatsheets/: README.md  example_cheatsheet.txt
prompts/complete/: README.md  example_complete_prompt.txt
prompts/templates/: README.md  baseline_minimal.j2  evaluation.jinja2  (+1 more)
reports/: README.md
scripts/: run_pytest.ps1
tests/: README.md  test_baselines.py  test_env_resolution.py  test_equations.py  test_error_report.py  test_eval_parser.py  test_eval_parser_more_formats.py  test_eval_parser_verdict.py  test_experiment_report.py  test_family_slice.py  test_family_tagger.py  test_local_runner.py  test_metrics.py  test_offline_rule_assets.py  test_offline_rule_review.py  test_positive_signal_candidate.py  test_prompt_render.py  test_prompting.py  test_splits.py
(+60 files in other folders)
